# haskell-advanced-training

./: README.md  hat.cabal
src/: Main.hs
src/HAT/: Person.hs
test/: Tests.hs
test/HAT/: FunctorTest.hs  JSONTests.hs  ReadTest.hs  TestUtils.hs
