Name:                haskell-advanced-training
Version:             0.0
Description:         Haskell advanced training
Synopsis:            Haskell advanced training
Category:            Test
License:             OtherLicense 
License-file:        LICENSE
Author:              Marek Dudek
Maintainer:          marek.dudek@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.6
source-repository head
  type:              git
  location:          https://github.com/MarekDudek/haskell-advanced-training.git 
Executable hat
  Main-is:           Main.hs
  Build-Depends:     base >= 3 && < 5, 
                     curl >= 1.3.6, 
                     json >= 0.7, 
                     time >= 1.4, 
                     old-locale >= 1.0.0.4,
                     random >= 1.0.1.1
  hs-source-dirs:    src
test-suite hat-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test/HAT
  main-is:           JSONTests.hs
  build-depends:     base >= 3 && < 5, 
                     QuickCheck, 
                     test-framework, 
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     HUnit >= 1.2.4.2
